# alfred-homeassistant

./: .lints  Cargo.toml  Makefile  config.toml
src/: capabilities.rs  main.rs
